2008.07.05 oubiwann

* Updated setup.py with code from zc.twist's setup.py.
* Updated README.
* Updated setup.py with utility functions from Zope Corp.
* Updated README some more.
* Added a manifest template so that doc files get included in the sdists.
* Updated TODO.
* Updated the example lb API .tac file.
* Fixed some whitespace.
* Merged changes made in 1.1.0 release branch.

2008.07.04 oubiwann

* Added toXML() method to the admin config object.
* Broke the manager section down into several parts.
* Updated docs to account for changes to the group/enable stuff and the manager
section.
* Added toXML() method to the admin config object.
* Added a control section.
* Added toXML() method to the top-level config object.
* Removed all references to pdconfig (changed to just 'config').
* Added a stub for an "enable group" page.
* Removed old read only page code.
* Added checks for read-only status.
* Added capability of templates to display messages at the top of the page.
* Updated the admin pages so that messages actually get displayed in the
header.
* Fixed error when deleting a host in the web UI.
* Added a setup for the config checker in application.director.
* Filled in the code for the config checker.
* Updated TODO.
* Added an addHost method to the proxy manager and update the
admin.pages.AddHost class to use it.
* Added missing getGroup method to ProxyService.
* Fixed some missing imports in the manager.
* Fixed the open call in the config checker.
* Moved the diff'ing admin code into defs.sh.
* Added an admin script for doing a stat that includes what the commit message
will be.
* Updated commit script to use the new diff function.
* Added an admin script for committing and pushing.
* Added an editor class to admin.pages for consolidating edit methods.
* Added start, stop, and protect decorator to editor class.
* Moved addHost calls into editor.
* Moved read-only check into base class.
* Added a delHost method to the GroupProxy model class.