@@ -9,6 +9,9 @@
 * Updated the example lb API .tac file.
 * Fixed some whitespace.
 * Merged changes made in 1.1.0 release branch.
+* Added support for more concise use of HostMapper by creating sensible
+defaults for proxy and group names.
+* Added a test for the concise form.
 
 2008.07.04 oubiwann
 
